# server/src/DTOs/auth.dto.ts
@@ -1,10 +1,15 @@
 import { Role } from "../models/user.entity";
 
-export interface UserDto{
+export interface RegisterDto{
     fullName:string,
     email:string,
     phoneNumber:string,
     address:string,
     password:string,
     role?:Role
+}
+export interface LoginDto{
+    phoneNumber?:string,
+    email?:string,
+    password:string
 }
