# server/src/controllers/authController.ts
@@ -1,25 +1,14 @@
-import { UserDto } from "../DTOs/user.dto";
+import { LoginDto, RegisterDto } from "../DTOs/auth.dto";
 import User from "../models/user.entity";
 import AuthServices from "../services/auth.services";
-import { Body, Controller, Post, Route, SuccessResponse, Tags } from "tsoa";
+import { Body, Controller, Post, Res, Route, SuccessResponse, Tags } from "tsoa";
+import bcrypt from 'bcryptjs'
+import { generateToken } from "../utils/token";
 
-// Define response interface
-interface RegisterResponse {
-  message: string;
-  data?:UserResponseDto; // Exclude password from User type
-}
-interface UserResponseDto{
-  id:string,
-  fullName:string,
-  phoneNumber:string,
-  email:string,
-  address:string,
-  role:string
-
-}
 @Route("auth")
 @Tags("Auth")
 export class AuthController extends Controller {
+
   /**
    * Register a new user
    * @param body User registration data
@@ -27,8 +16,7 @@ export class AuthController extends Controller {
    */
   @Post("/register")
   @SuccessResponse("201", "User registered successfully")
-  public async registerUser(@Body() body: UserDto): Promise<RegisterResponse> {
-    console.log(body)
+  public async registerUser(@Body() body: RegisterDto) {
     try {
       // Check if user already exists
       const existUser = await User.findOne({ where: { email: body.email } });
@@ -38,16 +26,47 @@ export class AuthController extends Controller {
       }
 
       // Register new user
-      const newUser:any= await AuthServices.registerUser(body);
-    
-
-      const {password,...userDetails}=newUser
-
+      const newUser = await AuthServices.registerUser(body);
+      const { password, ...userDetails } = newUser
       this.setStatus(201);
       return {
-        data: userDetails,
         message: "User registered successfully",
+        data: userDetails
+      }
+    } catch (error) {
+      this.setStatus(500);
+      return {
+        message: `Registration failed: ${error instanceof Error ? error.message : "Unknown error"}`,
       };
+    }
+  }
+  @Post("/login")
+  @SuccessResponse("200", "User logged in Successfully")
+  public async login(@Body() body: LoginDto) {
+    try {
+      const existUser = await User.findOne({
+        where: [
+          {
+            email: body.email
+          },
+          {
+            phoneNumber: body.phoneNumber
+          }
+        ]
+      })
+      if (!existUser) {
+        this.setStatus(404)
+        return { message: "User doesn't Exist" }
+      }
+      const passwordMatch = await bcrypt.compare(body.password, existUser.password)
+      if (!passwordMatch) {
+        this.setStatus(401)
+        return { message: "Inavlid credentials" }
+      }
+      const token = generateToken({ userId: existUser.id, role: existUser.role })
+     this.setHeader("Set-Cookie", `token=${token}; HttpOnly; Path=/; Max-Age=${60 * 60 * 24}; SameSite=Lax`)
+      this.setStatus(200)
+      return { message: "user logged in Successfully" }
     } catch (error) {
       this.setStatus(500);
       return {
